# Murphy

./: .gitignore  LICENSE  README.md  chatbot.py  chatbot_tools.py  main.py  pyproject.toml  startup.bat  template.env
murphy/: __init__.py  chatbot.py
murphy/utils/: __init__.py  agent_tools.py  utilityfuncs.py
src/: generation.py  messages_handler.py
tests/: test_messages_handler.py
