[tool.poetry]
name = "Murphy"
version = "0.1.0"
description = "Discord chatbot using a LangChain Agent w/ DeepSeek"
authors = ["Daethyra <109057945+Daethyra@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
langchain = "1.0.0a5"
langchain-deepseek = "^0.1.4"
langgraph = "^0.6.7"
langsmith = "^0.4.29"
discord-py = "^2.6.3"
python-dotenv = "^1.1.1"
google-search-results = "^2.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"